# bund_stdlib_analysis

./: Cargo.toml  README.md
src/: anomalies.rs  breakout.rs  bund_interface.rs  estimate.rs  lib.rs
src/forecast/: markov.rs  mod.rs
tests/: anomalydetection-test.rs  general-test.rs  integration-test.rs  integration_analysis-test.rs  integration_forecast-test.rs
