[package]
name = "bund_stdlib_analysis"
version = "0.2.0"
edition = "2021"
description = "Numeric and text analysis for BUND programming language"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_stdlib_analysis"
categories = ["compilers"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]
exclude = ["examples", "Models", "Documentation", ".*"]

[dependencies]
anomaly_detection = "0.3.1"
augurs =  { version = "0.9.*", features = ["forecaster", "ets", "mstl", "outlier", "dtw", "clustering", "seasons"] }
breakout = "0.3.0"
bundcore = ">=0.*.*"
decorum = "0.3.1"
distimate = "0.2.1"
easy-error = "1.0.0"
lazy_static = "1.5.0"
log = "0.4.28"
markov-chain = "0.1.*"
rstats = "2.1.12"
rust_dynamic = ">=0.*.*"
rust_multistackvm = ">=0.*.*"
statrs = "0.18.*"
time-graph = { version="0.3.2", features=["table"] }
